Revert "Fixed spacing problems with OMR currency (#1251)"
This reverts commit 43c0720cf8d361b1dce3bfdc8bff99cfab124466.

--- a/src/app/fyle/team-reports/team-report-card/team-report-card.component.scss
+++ b/src/app/fyle/team-reports/team-report-card/team-report-card.component.scss
@@ -45,10 +45,6 @@
     justify-content: space-between;
   }
 
-  &--amount-box {
-    margin-right: 6px;
-  }
-
   &--currency {
     color: $black-light;
     font-weight: 500;
@@ -61,6 +57,7 @@
     color: $black;
     font-size: 20px;
     line-height: 1.3;
+    margin-right: 6px;
     font-weight: 500;
   }
 
